--- a/views/user/forgottPass.ejs
+++ b/views/user/forgottPass.ejs
@@ -37,7 +37,7 @@
                             <div class="invalid-feedback"></div>
                         </div>
                         <button type="submit" class="btn-primary" form="emailForm">Continue</button>
-                        <a href="/forgottPass" class="forgot-link">Sigin with Password</a>
+                        <a href="/signin" class="forgot-link">Sigin with Password</a>
                     </form>
                 </div>
             </div>
