--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAMZONE Sign Up</title>
-    <link rel="stylesheet" href="/stylesheet/user/signup.css">
+     <link rel="stylesheet" href="/stylesheet/user/Signin.css">
     <link rel="stylesheet" href="/stylesheet/partials/users/header.css">
     <link rel="stylesheet" href="/stylesheet/partials/users/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -61,14 +61,13 @@
                     <button type="submit" form="signupForm"  class="btn-primary">Create Account</button>
     
                     <div class="google-signin">
-                        <a href="/auth/google">
-                        <button type="button" class="btn-google">
+                            <a href="/auth/google" class="btn-google">
                                 <img src="/images/icons/google.png" alt="Google">
-                            </button>
-                        </a>
-                    </div>
+                                Login with Google
+                            </a>
+                        </div>
     
-                    <div class="login-prompt">
+                    <div class="register-prompt">
                         Already have account? <a href="/signin">Sign In</a>
                     </div>
                 </form>
