--- a/public/stylesheet/user/Signin.css
+++ b/public/stylesheet/user/Signin.css
@@ -12,6 +12,11 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+    color: var(--text-color);
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     line-height: 1.6;
