--- a/views/partials/users/header.ejs
+++ b/views/partials/users/header.ejs
@@ -55,7 +55,8 @@
                     <div class="dropdown">
                         <a href="/profile"><img src="/images/icons/user.png" alt="Profile" class="icon"> Profile</a>
                         <a href="/myOrders"><img src="/images/icons/clipboard.png" alt="Orders" class="icon"> My Orders</a>
-                        <a href="#"><img src="/images/icons/wallet.png" alt="Wallet" class="icon"> My Wallet</a>
+                        <a href="/wallet"><img src="/images/icons/wallet.png" alt="Wallet" class="icon"> My Wallet</a>
+                        <a href="/wishList"><img src="/images/icons/heart.png" alt="WishList" class="icon">Wish List</a>
                         <a href="#"><img src="/images/icons/rate.png" alt="Ratings" class="icon"> My Ratings</a>
                         <a href="/signout"><img src="/images/icons/signout.png" alt="signout" class="icon"> Sign Out</a>
                     </div>
