--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -323,10 +323,10 @@
                     <input type="radio" name="payment" value="Razorpay" checked aria-label="Pay with RazorPay">
                     RazorPay
                 </label>
-                <label class="payment-option">
+                <!-- <label class="payment-option">
                     <input type="radio" name="payment" value="Wallet" aria-label="Pay with Wallet">
                     Pay With Wallet
-                </label>
+                </label> -->
                 <label class="payment-option">
                     <input type="radio" name="payment" value="Cash On Delivery" aria-label="Cash on Delivery">
                     Cash on Delivery
