--- a/public/stylesheet/user/home.css
+++ b/public/stylesheet/user/home.css
@@ -34,7 +34,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1a1a1a;
+    background: #f3f3f3;
     color: white;
 }
 
