--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -103,7 +103,7 @@
       
           <div class="order-actions">
             <a href="/" class="btn btn-secondary">Back to home page</a>
-            <a href="/order/<%= order.orderId %>" class="btn btn-primary">View Order</a>
+            <a href="/orderDetails/?id=<%= order._id %>" class="btn btn-primary">View Order</a>
           </div>
         </div>
       </div>
